# ekcelo

./: .eslintrc.json  .gitattributes  .gitignore  03_enrich_v14.py  CLAUDE.md  README.md  _config.yml  index.html  install.bat  logic_index_html.md  pirushin_sosn_rocha_052_make_structure_v1.py  pirushin_sosn_rocha_07_init_project_v1.py  pirushin_sosn_rocha_08_build_kmz_v1.py  pirushin_sosn_rocha_08_build_kmz_v2.py  pyproject.toml  run_scan_report.bat  run_watchdog.bat  schema.sql  serve.py  sw.js  v2961.html  worker.js  worker_good_work2026-04-26.js
parser/: .env.example  DB_NORMALIZATION.md  DEVELOPER_PROMPT.md  MIGRATION.md  bugfix_summary_1_to_37.md  install.bat  pyproject.toml  run_scan_report.bat  run_watchdog.bat
parser/egrn_parser/: __init__.py  __main__.py  api.py  bundle_assembler.py  bundle_manifest.py  cli.py  config.py  dictionaries.py  documents_schema.py  etp_merge.py  geo_kmz.py  geo_nspd.py  geo_nspd_browser.py  inspect_db.py  lot_assembler.py  schema_export.py  state_tags.py  temporal.py
parser/exporters/: __init__.py
parser/output/: egrn.db
parser/prompts/: photo_structure_linter.md
parser/rekvizity/: __init__.py  canonical.py  cli.py  merge.py  store.py
parser/scripts/: 01_parsing_nspd_v8.py  01b_ingest_contours.py  01c_contours_to_db.py  03_enrich_v17.py  04_nspd_graph_v14.py  golden_path_demo.py  pirushin_sosn_rocha_052_make_structure_v2.py  pirushin_sosn_rocha_052_make_structure_v2_1.py  pirushin_sosn_rocha_052_make_structure_v2_2.py  pirushin_sosn_rocha_06_photo_report_to_docx_v3.py  pirushin_sosn_rocha_07_init_project_v1.py  pirushin_sosn_rocha_07_init_project_v2.py  pirushin_sosn_rocha_07_init_project_v3.py  pirushin_sosn_rocha_08_build_kmz_v1.py  pirushin_sosn_rocha_08_build_kmz_v2.py  pirushin_sosn_rocha_08_build_kmz_v2_2.py  pirushin_sosn_rocha_09_make_reports_v1.py  pirushin_sosn_rocha_10_make_tz1_for_contract_ekcelo_v1.py  pirushin_sosn_rocha_11_make_contract_body_v1.py  pirushin_sosn_rocha_12_make_contract_appendix2_v1.py  pirushin_sosn_rocha_13_assemble_contract_v1.py
parser/tests/: conftest.py  test_address_parser.py  test_agro_reports.py  test_agro_techcard.py  test_assembler.py  test_auto_commit_hook.py  test_auto_export_hook.py  test_basic.py  test_build_kmz_v2.py  test_build_kmz_v2_2.py  test_build_lot_context.py  test_bundle_assembler.py  test_bundle_manifest.py  test_differ_json_canonical.py  test_documents_schema.py  test_egrul_egrip_db.py  test_egrul_egrip_parser.py  test_egrul_egrip_pipeline.py  test_egrul_egrip_sources.py  test_encumbrance_mapper.py  test_etl_checko.py  test_etl_exif.py  test_etl_osv.py  test_etl_pipeline_cli.py  test_etp_cli_integration.py  test_etp_merge.py  test_etp_profile_schema.py  test_export_json.py  test_folder_match.py  test_geo_kmz.py  test_geo_nspd.py  test_geo_nspd_browser.py  test_graph_edges_and_agro_link.py  test_graph_node_id.py  test_import_kml_geo_cli.py  test_ingest_contours.py  test_init_db_cli.py  test_init_project_v2.py  (+25 more)
(+691 files in other folders)
