[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egrn-parser"
version = "1.10.0"
description = "Парсинг выписок ЕГРН (PDF/XML), ОСВ → SQLite/XLSX/JSON/graph.json"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
api = ["fastapi>=0.111", "uvicorn[standard]>=0.29"]

[project.scripts]
egrn-parser = "egrn_parser.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["egrn_parser*"]

[tool.setuptools.package-data]
"egrn_parser" = ["db/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
